services_networking/networkPolicy/case_3/solution/network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np
  namespace: jupiter
spec:
  podSelector:
    matchLabels:
      app: metrics
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
          - key: kubernetes.io/metadata.name
            operator: NotIn
            values:
            - jupiter
